Scrollbar styling fixed

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1012,6 +1012,23 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Adding scrollbar theme - WB Leandro revision Team*/
+
+div#arstravel_choices > div > div::-webkit-scrollbar {
+  width: 5px;
+  height: 6px;
+}
+
+div#arstravel_choices > div > div::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px #fff;
+}
+
+div#arstravel_choices > div > div::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.6);
+  outline: none;
+  border-radius: 5px;
+}
+
 .focus-within\:shadow-sm:focus-within {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
