--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3,13 +3,28 @@
 @tailwind utilities;
 
 @layer components {
-	.card {
-		@apply w-48 md:w-80 h-64 md:h-80 shadow-md rounded-lg flex-none transform transition-all hover:-translate-y-4 hover:shadow-xl;
-	}
-	.card-bg-opacity {
-		@apply w-full h-full bg-black bg-opacity-20;
-	}
-	.card-title {
-		@apply text-3xl px-8 pt-8 pb-2 font-semibold text-white;
-	}
+  .card {
+    @apply w-48 md:w-80 h-64 md:h-80 shadow-md rounded-lg flex-none transform transition-all hover:-translate-y-4 hover:shadow-xl;
+  }
+  .card-bg-opacity {
+    @apply w-full h-full bg-black bg-opacity-20;
+  }
+  .card-title {
+    @apply text-3xl px-8 pt-8 pb-2 font-semibold text-white;
+  }
+}
+
+/* Adding scrollbar theme - WB Leandro revision Team*/
+div#arstravel_choices > div > div::-webkit-scrollbar {
+  width: 5px;
+  height: 6px;
+}
+div#arstravel_choices > div > div::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px #fff;
+}
+
+div#arstravel_choices > div > div::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.6);
+  outline: none;
+  border-radius: 5px;
 }
